Modificado estilo de todos os inputs da view informações contato

--- a/WebContent/pages/contato.xhtml
+++ b/WebContent/pages/contato.xhtml
@@ -257,37 +257,50 @@
 			<h:form id="formContatoInfo">
 				<h:panelGrid id="panelContatoInfo" columns="2">
 					<h:outputLabel value="Nome:" />
-					<h:inputText value="#{contatoBean.contato.nome}" disabled="true" />
+					<h:inputText value="#{contatoBean.contato.nome}" disabled="true"
+						class="ui-inputfield ui-inputmask ui-widget ui-state-default ui-corner-all" />
 
 					<h:outputLabel value="Endereco:" />
-					<h:inputText value="#{contatoBean.contato.endereco}" disabled="true" />
+					<h:inputText value="#{contatoBean.contato.endereco}"
+						disabled="true"
+						class="ui-inputfield ui-inputmask ui-widget ui-state-default ui-corner-all" />
 
 					<h:outputLabel value="Telefone:" />
-					<h:inputText value="#{contatoBean.contato.telefone}" disabled="true" />
+					<h:inputText value="#{contatoBean.contato.telefone}"
+						disabled="true"
+						class="ui-inputfield ui-inputmask ui-widget ui-state-default ui-corner-all" />
 
 					<h:outputLabel value="Celular:" />
-					<h:inputText value="#{contatoBean.contato.celular}" disabled="true" />
+					<h:inputText value="#{contatoBean.contato.celular}" disabled="true"
+						class="ui-inputfield ui-inputmask ui-widget ui-state-default ui-corner-all" />
 
 					<h:outputLabel value="Email:" />
-					<h:inputText value="#{contatoBean.contato.email}" disabled="true" />
+					<h:inputText value="#{contatoBean.contato.email}" disabled="true"
+						class="ui-inputfield ui-inputmask ui-widget ui-state-default ui-corner-all" />
 
 					<h:outputLabel value="Profissão:" />
-					<h:inputText value="#{contatoBean.contato.profissao}" disabled="true" />
+					<h:inputText value="#{contatoBean.contato.profissao}"
+						disabled="true"
+						class="ui-inputfield ui-inputmask ui-widget ui-state-default ui-corner-all" />
 
 					<h:outputLabel value="Empresa:" />
-					<h:inputText value="#{contatoBean.contato.empresa}" disabled="true" />
+					<h:inputText value="#{contatoBean.contato.empresa}" disabled="true"
+						class="ui-inputfield ui-inputmask ui-widget ui-state-default ui-corner-all" />
 
 					<h:outputLabel value="Data Nascimento:" />
 					<h:inputText value="#{contatoBean.contato.dataNascimento}"
-						disabled="true" />
+						disabled="true"
+						class="ui-inputfield ui-inputmask ui-widget ui-state-default ui-corner-all" />
 
 					<h:outputLabel value="Data Cadastro" />
 					<h:inputText value="#{contatoBean.contato.dataCadastro}"
-						disabled="true" />
+						disabled="true"
+						class="ui-inputfield ui-inputmask ui-widget ui-state-default ui-corner-all" />
 
 					<h:outputLabel value="Observação" />
 					<h:inputTextarea value="#{contatoBean.contato.observacao}"
-						disabled="true" />
+						disabled="true"
+						class="ui-inputfield ui-inputmask ui-widget ui-state-default ui-corner-all" />
 
 				</h:panelGrid>
 
