Modificado estrutura modal excluir contato

--- a/WebContent/pages/contato.xhtml
+++ b/WebContent/pages/contato.xhtml
@@ -181,7 +181,7 @@
 					<h:outputText value="#{contatoBean.contato.codigo}" />
 
 					<h:outputLabel value="Nome:" />
-					<h:outputText value="#{contatoBean.contato.nome}" />
+					<h:inputText value="#{contatoBean.contato.nome}" disabled="true"/>
 				</h:panelGrid>
 
 				<h:panelGrid columns="2">
